# m5stack-codex-companion

./: .gitignore  AGENTS.md  README.md  platformio.ini  pyproject.toml
bridge/sticks3_bridge/: __init__.py  app_server.py  cli.py  desktop_observer.py  device.py  pairing.py  protocol.py
docs/: cardputer-references.md  distribution.md  mac-codex-app-bridge.md  protocol.md
macos/LaunchAgents/: com.simon.sticks3-codex-companion.plist
macos/StickS3Companion/: Package.swift
macos/StickS3Companion/Sources/StickS3Companion/: main.swift
macos/swiftbar/: sticks3-codex.5s.sh
planning/: current-state.md
scripts/: build-macos-companion  sticks3-macos-bridge
src/: main.cpp
tests/: test_app_server.py  test_desktop_observer.py  test_device.py  test_macos_supervisor.py  test_pairing.py  test_protocol.py
