[project]
name = "sticks3-codex-companion"
version = "0.1.0"
description = "StickS3 firmware and macOS bridge for a Codex app companion display."
requires-python = ">=3.11"
dependencies = [
  "bleak>=0.22.3",
  "websockets>=12.0",
]

[project.scripts]
sticks3-bridge = "sticks3_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge/sticks3_bridge"]
